--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
 <body class="cuerpo">
     <header class="cabecera">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm" style="padding: 0px;">
-            <div class="container">
+            <div class="cabecera-poner cuerpo-ancho">
                 <div class="menu-dropdown">
                     <button class="texto-cabecera" style="border: 0px; margin-left: 0px; margin-right: 30px;"><i class="fa-solid fa-bars" style="font-size: 20px; line-height: 40px;"></i></button>
                     <div class="menu-dropdown-contenido">
@@ -135,12 +135,12 @@
         </nav>
     </header>
 
-    <main role="main" class="container cuerpo-espacio">
+    <main role="main" class="cuerpo-ancho cuerpo-espacio">
         @RenderBody()
     </main>
 
     <footer class="pie">
-        <div class="container">
+        <div class="cuerpo-ancho">
             <div style="display: flex; align-items: center;">
                 <div style="width: 80%; text-align: left;">
                     &copy; @DateTime.Now.Year.ToString() • <a href="https://pepeizqapps.com/" class="texto-pie" target="_blank">pepeizq's apps</a> • pepeizq's deals • <a asp-page="/Privacy" class="texto-pie">@Herramientas.Idiomas.CogerCadena(idioma, "Layout.Privacy")</a>
