--- a/pepeizqs deals web/Pages/HistoricalLow.cshtml
+++ b/pepeizqs deals web/Pages/HistoricalLow.cshtml
@@ -1,14 +1,9 @@
 ﻿@page
 @model pepeizqs_deals_web.Pages.HistoricalLowModel
 
-@* @using Microsoft.Extensions.Caching.Memory; *@
-
 @{
 	ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "HistoricalLow.Title");
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-@* vary-by-user="true" *@
-@* <cache priority="CacheItemPriority.Low" expires-after="@TimeSpan.FromMinutes(10)" vary-by="@Model.idioma"> *@
-	@(await Html.RenderComponentAsync<Componentes.Secciones.Minimos>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
-@* </cache> *@
+@(await Html.RenderComponentAsync<Componentes.Secciones.Minimos>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma, modo = @Model.modo }))
