--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                             </a>
                         }
                         
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/historicallow">
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/HistoricalLow">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.HistoricalLows")
                         </a>
                         <hr>
@@ -81,7 +81,7 @@
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/lastnews">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.LastNews")
                         </a>
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/lastadded">
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/LastAdded">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.LastAdded")
                         </a>
                     </div>
