--- a/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAñadidos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAñadidos.razor
@@ -10,31 +10,51 @@
 
 @if (juegosMostrar.Count > 0)
 {
-	<div style="position: fixed; z-index: 1; margin-top: -40px; width: 100%; left: 0;">
-		<button @onclick="ClickearAtras" class="boton-pequeño" style="width: 50px; font-size: 22px; text-align: center; margin: 40px; left: 0; position: fixed;"><i class="fa-solid fa-chevron-left"></i></button>
-		<button @onclick="ClickearAdelante" class="boton-pequeño" style="width: 50px; font-size: 22px; text-align: center; margin: 40px; right: 0; position: fixed;"><i class="fa-solid fa-chevron-right"></i></button>
+	<div style="background-color: var(--fondoCuerpo); position: sticky; position: -webkit-sticky; top: 70px; z-index: 1; margin: -10px; padding: 10px;">
+		<div style="display: flex; align-items: center; width: 100%;">
+			<div style="width: 70%; font-size: 23px; text-align: left;">
+				@Herramientas.Idiomas.CogerCadena(idioma, "LastAdded.String1")
+			</div>
+
+			<div style="display: flex; align-items: center; width: 30%; justify-content: right;">
+				<div style="font-size: 16px; text-align: right;">
+					@minimo.ToString()/@juegos.Count.ToString()
+				</div>
+
+				@if (minimo >= 50)
+				{
+					<a @onclick="ClickearAtras" class="boton-pequeño" href="/LastAdded#top" target="_top" style="width: 50px; font-size: 20px; text-align: center; margin-left: 20px;"><i class="fa-solid fa-chevron-left"></i></a>
+				}
+
+				<a @onclick="ClickearAdelante" class="boton-pequeño" href="/LastAdded#top" target="_top" style="width: 50px; font-size: 20px; text-align: center; margin-left: 20px;"><i class="fa-solid fa-chevron-right"></i></a>
+			</div>
+		</div>
 	</div>
 
-	<div class="perfil" style="padding: 15px 20px;">
+	<hr />
+
+	<div>
 		@foreach (var juego in juegosMostrar)
 		{
-			<div class="perfil-flexible-centrado" style="margin-top: 15px; margin-bottom: 15px;">
-				<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Id" target="_blank">
+			<div class="perfil-flexible-centrado" style="margin-top: 25px; margin-bottom: 25px;">
+				<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Id">
 					<div class="perfil-flexible-centrado">
-						<div style="width: 20%;">
-							<img src="@juego.Imagenes.Capsule_231x87" style="max-height:100%; max-width:100%;" />
+						<div style="width: 18%;">
+							<img src="@juego.Imagenes.Capsule_231x87" style="min-height: 100%; min-width: 100%; margin: 3px;" />
 						</div>
 
-						<div style="width: 60%; padding: 4px 15px;">
-							@juego.Nombre
+						<div style="width: 67%; padding: 5px 20px;">
+							<div style="font-size: 18px;">@juego.Nombre</div>
 
 							@if (BaseDatos.Usuarios.Buscar.RolDios(UserManager.GetUserName(HttpContextAccessor.HttpContext!.User)) == true)
 							{
-								<br /> @juego.Id
-							}
+								<div class="perfil-flexible-centrado" style="justify-content: left; margin-top: 10px;">
+									<div style="font-size: 13px;">@juego.Id</div>
+								</div>
+							}							
 						</div>
 
-						<div style="width: 20%; padding: 4px 30px 4px 0px; text-align: right;">
+						<div style="width: 15%; padding: 4px 15px 4px 15px; text-align: center; font-size: 18px;">
 							@Herramientas.JuegoFicha.PrecioMinimoActual(juego, true, idioma)
 						</div>
 					</div>
@@ -66,7 +86,7 @@
 
 		using (conexion)
 		{
-			juegos = Buscar.Todos(conexion);
+			juegos = Buscar.Ultimos(conexion, "juegos", 500);
 
 			if (juegos.Count > 0)
 			{
