--- a/pepeizqs deals web/Pages/LastAdded.cshtml
+++ b/pepeizqs deals web/Pages/LastAdded.cshtml
@@ -2,7 +2,7 @@
 @model pepeizqs_deals_web.Pages.LastAddedModel
 
 @{
-	ViewData["Title"] = "Latest Games Added";
+	ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "LastAdded.Title");
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
