--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -30,11 +30,11 @@
     <title>@titulo</title>
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/maestro.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/css/cabecera_cuerpo_pie.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/resto.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" />
+    <link rel="stylesheet" href="~/css/maestro.css" asp-append-version="true" type="text/css" />
+    <link rel="stylesheet" href="~/css/cabecera_cuerpo_pie.css" asp-append-version="true" type="text/css" />
+    <link rel="stylesheet" href="~/css/resto.css" asp-append-version="true" type="text/css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" type="text/css" />
+    <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" type="text/css" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
