--- a/pepeizqs deals web/Pages/Componentes/Admin/Tiendas.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Tiendas.razor
@@ -1,6 +1,4 @@
-﻿@using Hangfire;
-@using Hangfire.Storage;
-@using Microsoft.AspNetCore.Components.Web;
+﻿@using Microsoft.AspNetCore.Components.Web;
 @using Microsoft.AspNetCore.Identity
 @using pepeizqs_deals_web.Areas.Identity.Data
 @using Tiendas2
@@ -10,15 +8,6 @@
 
 @if (BaseDatos.Usuarios.Buscar.RolDios(UserManager.GetUserName(HttpContextAccessor.HttpContext!.User)) == true)
 {
-	@* <button @onclick="IniciarTiendas" class="boton-pequeño">Iniciar</button> *@
-
-	<div class="perfil perfil-espacio-bottom">
-		@foreach (var tarea in tareasActivas)
-		{
-			<div>@tarea</div>
-		}
-	</div>
-
 	<div class="perfil perfil-espacio-bottom" style="padding: 25px 40px;">
 		@foreach (Tienda tienda in TiendasCargar.GenerarListado())
 		{
@@ -60,51 +49,6 @@
 	#nullable disable
 
 	private string tiendaElegida = null;
-
-	private List<string> tareasActivas = new List<string>();
-
-	protected override void OnInitialized()
-	{
-
-	}
-
-	// private void IniciarTiendas()
-	// {
-	// 	int orden = BaseDatos.Tiendas.Admin.TareaLeerOrden();
-
-	// 	RecurringJobManager manager = new RecurringJobManager();
-
-	// 	// RecurringJobOptions opciones = new RecurringJobOptions();
-	// 	// opciones.TimeZone = TimeZoneInfo.FindSystemTimeZoneById("Romance Standard Time");
-	// 	// opciones.MisfireHandling = MisfireHandlingMode.Strict;
-
-	// 	manager.AddOrUpdate<Herramientas.ITareasGestionador>("portada y secciones", job => job.PortadaTarea(), "*/2 * * * *");
-	// 	manager.AddOrUpdate<Herramientas.ITareasGestionador>("tiendas comprobador", job => job.TiendasTarea(), "*/20 * * * *");
-
-	// 	using (IStorageConnection conexion = JobStorage.Current.GetConnection())
-	// 	{
-	// 		// foreach (RecurringJobDto tareaActiva in StorageConnectionExtensions.GetRecurringJobs(conexion))
-	// 		// {
-	// 		// 	RecurringJob.RemoveIfExists(tareaActiva.Id);
-	// 		// }
-
-	// 		foreach (RecurringJobDto tareaActiva in StorageConnectionExtensions.GetRecurringJobs(conexion))
-	// 		{
-	// 			if (tareaActiva.NextExecution != null)
-	// 			{
-	// 				if (tareaActiva.Id == "tiendas comprobador")
-	// 				{
-	// 					tareasActivas.Add(tareaActiva.Id + " • " + tareaActiva.NextExecution.Value.ToString() + " • orden " + orden.ToString() /* + " " + tareaActiva.LoadException.Message */);
-	// 				}
-	// 				else
-	// 				{
-	// 					tareasActivas.Add(tareaActiva.Id + " • " + tareaActiva.NextExecution.Value.ToString() /* + " " + tareaActiva.LoadException.Message */);
-	// 				}				
-	// 			}
-	// 		}
-	// 	}
-	
-	// }
 
 	private void ClickearTienda(MouseEventArgs e, string id)
 	{
