--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -215,13 +215,8 @@
 	List<Noticia> noticiasMostrar = new List<Noticia>();
 	List<Noticia> noticiaEvento = new List<Noticia>();
 
-	protected override async void OnInitialized()
+	protected override void OnInitialized()
 	{
-		// await Herramientas.Imagenes.DescargarYGuardar("https://cdn.akamai.steamstatic.com/steam/apps/1366540/header.jpg?t=1679453191", "imagenes", "test.jpg");
-
-
-		//----------------
-
 		SqlConnection conexion = Herramientas.BaseDatos.Conectar();
 
 		using (conexion)
@@ -231,6 +226,12 @@
 			juegosAñadidosMostrar = BaseDatos.Juegos.Buscar.Todos(conexion, "portadaJuegosAnadidos");
 
 			noticiasMostrar = BaseDatos.Noticias.Buscar.Todas(conexion, "portadaNoticias");
+
+			if (noticiasMostrar.Count > 0)
+			{
+				noticiasMostrar = noticiasMostrar.OrderBy(x => x.FechaEmpieza).Reverse().ToList();
+			}
+
 			noticiaEvento = BaseDatos.Noticias.Buscar.Todas(conexion, "portadaNoticiasEvento");
 		}
 
