--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -36,13 +36,13 @@
 }
 
 <div class="juego-wrap">
-	<img class="juego-fondo" src="@Model.juego.Imagenes.Library_1920x620" onerror="this.parentNode.removeChild(this)" />
+	<img class="juego-fondo" src="@await Imagenes.DescargarYGuardar(@Model.juego.Imagenes.Library_1920x620, "juegos", @Model.juego.Id.ToString(), "library_1920x620")" onerror="this.parentNode.removeChild(this)" />
 
     <div class="juego-contenido">
         <div class="perfil-espacio-bottom juego-cabecera">      
 			<div class="perfil-flexible-centrado">
 				<div class="juego-flexible-izquierda">
-					<img src="@Herramientas.JuegoFicha.LimpiarImagenJuego(Model.juego.Imagenes.Header_460x215)" class="juego-imagen" />
+					<img src="@JuegoFicha.LimpiarImagenJuego(await Imagenes.DescargarYGuardar(@Model.juego.Imagenes.Header_460x215, "juegos", @Model.juego.Id.ToString(), "header_460x215"))" class="juego-imagen" />
 				</div>
 				<div class="juego-titulo">
 					@Model.juego.Nombre <br/>
@@ -65,7 +65,7 @@
 
 						@if (Model.juego.IdSteam > 0)
 						{
-							<input type="button" value="@Herramientas.Idiomas.CogerCadena(Model.idioma, "Game.String1")" class="juego-boton-pequeño" style="margin-left: 10px;" onclick="window.open('@Herramientas.EnlaceAcortador.Generar("https://store.steampowered.com/app/" + Model.juego.IdSteam.ToString(), "steam")', '_blank')" target="_blank" />
+							<input type="button" value="@Idiomas.CogerCadena(Model.idioma, "Game.String1")" class="juego-boton-pequeño" style="margin-left: 10px;" onclick="window.open('@Herramientas.EnlaceAcortador.Generar("https://store.steampowered.com/app/" + Model.juego.IdSteam.ToString(), "steam")', '_blank')" target="_blank" />
 						}	
 					</div>
 				</div>
@@ -73,7 +73,7 @@
 				@if (Model.juego.Analisis != null)
 				{
 					<div class="juego-analisis">
-						<div class="juego-analisis-texto2">@Herramientas.Idiomas.CogerCadena(Model.idioma, "Game.String2")</div>
+						<div class="juego-analisis-texto2">@Idiomas.CogerCadena(Model.idioma, "Game.String2")</div>
 
 						<div class="juego-analisis-display">
 							@if (int.Parse(Model.juego.Analisis.Porcentaje) > 74)
@@ -208,7 +208,7 @@
 							{
 								<div class="juego-galeria-imagenes">
 									<div class="juego-galeria-numero">@(i + 1) / @Model.juego.Media.Capturas.Count</div>
-									<img src="@Model.juego.Media.Capturas[i]" style="width:100%;">
+									<img src="@await Imagenes.DescargarYGuardar(@Model.juego.Media.Capturas[i], "juegos", @Model.juego.Id.ToString(), "captura" + i.ToString())" style="width:100%;">
 								</div>
 							}
 
@@ -225,7 +225,7 @@
 									@for (int i = 0; i < Model.juego.Media.Miniaturas.Count; i++)
 									{
 										<div class="juego-galeria-columna">
-											<img class="juego-galeria-capturas juego-galeria-cursor" src="@Model.juego.Media.Miniaturas[i]" style="width: 100%;" onclick="cambiarImagen(@i + 1)">
+											<img class="juego-galeria-capturas juego-galeria-cursor" src="@await Imagenes.DescargarYGuardar(@Model.juego.Media.Miniaturas[i], "juegos", @Model.juego.Id.ToString(), "miniatura" + i.ToString())" style="width: 100%;" onclick="cambiarImagen(@i + 1)">
 										</div>
 									}
 								</div>
